--- a/css/styles.css
+++ b/css/styles.css
@@ -3090,6 +3090,21 @@ h1 {
   display: flex;
 }
 
+.section-8 {
+  margin-top: auto;
+}
+
+.section-9 {
+  margin-top: 350px;
+  font-family: Proxima Nova Font, sans-serif;
+  line-height: 50px;
+}
+
+.heading-6 {
+  font-family: Proxima Nova Font, sans-serif;
+  line-height: 60px;
+}
+
 @media screen and (min-width: 1440px) {
   .nav-wrapper {
     -webkit-backdrop-filter: blur(5px);
@@ -3463,6 +3478,20 @@ h1 {
   .content {
     grid-template-columns: 1fr;
     grid-auto-columns: 1fr;
+  }
+
+  .section-9 {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+  }
+
+  .heading-6 {
+    justify-content: center;
+    align-items: center;
+    font-size: 100px;
+    line-height: 80px;
+    display: flex;
   }
 }
 
